--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">RecyclerViewDemo</string>
     <string name="action_add">Add</string>
     <string name="action_remove">Remove</string>
+    <string name="selected_count">%1$s selected</string>
 
 </resources>
